feat: synchronize empty directories
